--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_HOST=database-1.c1e2yykcsf1j.us-east-2.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=commerce
 DB_USERNAME=laravelapi
-DB_PASSWORD=77Ca0277$
+DB_PASSWORD=*********
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
